[project]
name = "python_developer"
version = "0.1.0"
description = "python_developer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0"
]

[project.scripts]
python_developer = "python_developer.main:run"
run_crew = "python_developer.main:run"
train = "python_developer.main:train"
replay = "python_developer.main:replay"
test = "python_developer.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
